2000-10-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Changed all function header to ANSI style.

	* configure.in: changed compiler flags in case of Sun WorkShop
	compiler. Thanks to Bert Helthuis.

	* mibs/ietf/RDBMS-MIB: Fixed an unknown imported identifier.
	Thanks to Pat Knight.

2000-10-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/PTOPO-MIB: added (RFC 2922).

2000-09-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/iana/IANA-RTPROTO-MIB: added IANA maintained MIB module.

2000-08-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/UPS-MIB: fixed two illegal integer range restrictions.

2000-08-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-identifiers.c: update from Juergen.

2000-08-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-identifiers.c: added simple list of all identifiers.

	* tools/dump-cm.c: minor changes by Andreas.

2000-07-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.5.tar.gz: released version 0.2.5.

	* configure.in (LIBTOOL_VERSION): added checks for additional
	Sun compiler flag (others may follow) to make the flex generated
	scanner happy about prototypes.

	* lib/smi.h.in: many compilers are unhappy with empty structures
	(not only MS VC++).

	* lib/scanner-smi.h: moved YY_DECLs from scanner-*.h to scanner-*.l.
	
2000-07-11  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/Makefile.mingw: Updated to reflect check.c and dump-metrics.c.

2000-07-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: simplified output by moving some code to
	the static parent class of the JAX package. Some code cleanups.

2000-07-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed line numbers of object, type, and
	macro definitions to be the first line of the defining SMI
	statement.

	* lib/check.c: Bill Fenner contributed a patch that fixes
	the location of complained identifiers if they are imported.
